use guice in unit test