@@ -43,6 +43,10 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <configuration>
           <mainClass>de.regatta_hd.ui.App</mainClass>
+          <options>
+            <option>--add-opens</option>
+            <option>java.base/java.lang=com.google.guice</option>
+          </options>
         </configuration>
       </plugin>
     </plugins>
